--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.hexicode.zend">
+    <uses-permission android:name="android.permission.READ_CONTACTS"/>
+    <uses-permission android:name="android.permission.WRITE_CONTACTS"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.NFC" />
+
+    <uses-feature
+        android:name="android.hardware.camera"
+        android:required="false" />
+    <uses-feature
+        android:name="android.hardware.nfc"
+        android:required="true" />
 
     <application
         android:allowBackup="true"
@@ -8,6 +20,11 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <provider
+            android:name=".data.ZendCardsProvider"
+            android:authorities="com.hexicode.zend"
+            android:exported="true"
+            android:syncable="true" />
         <activity
             android:name=".ZendMainActivity"
             android:label="@string/app_name"
@@ -17,6 +34,27 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".ContactDetail"
+            android:label="@string/title_activity_contact_detail"
+            android:screenOrientation="portrait" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.hexicode.zend.ZendMainActivity" />
+        </activity>
+        <activity
+            android:name=".AddZendCardActivity"
+            android:label="@string/title_activity_add_contact_card" >
+        </activity>
+        <activity
+            android:name=".ShareZendCardNFC"
+            android:label="@string/title_activity_share_contact_card_nfc"
+            android:parentActivityName=".ZendMainActivity"
+            android:exported="true">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.hexicode.zend.ZendMainActivity" />
         </activity>
     </application>
 
